force-app/main/default/objects/IEP__c/IEP__c.object-meta.xml
<CustomObject>
    <description>Individual Education Plan</description>
    <label>IEP</label>
    <nameField>
        <displayFormat>IEP-{yy}{mm}{dd}-{00}</displayFormat>
        <label>IEP No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>