force-app/main/default/objects/IEP__c/fields/Assossor_Name__c.field-meta.xml
<CustomField>
    <fullName>Assossor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Assessed and reported by the Learning Support Educator</inlineHelpText>
    <label>Assossor Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IEP</relationshipName>
    <type>Lookup</type>
</CustomField>