force-app/main/default/objects/IEP__c/fields/Basic_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>Basic_Vocabulary__c</fullName>
    <label>Basic Vocabulary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>