force-app/main/default/objects/IEP__c/fields/Case_File_No__c.field-meta.xml
<CustomField>
    <fullName>Case_File_No__c</fullName>
    <label>Case File No</label>
    <referenceTo>Case_File__c</referenceTo>
    <relationshipLabel>IEP</relationshipLabel>
    <relationshipName>IEP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>