force-app/main/default/objects/IEP__c/fields/Date_of_Plan__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Plan__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>The date this plan was proposed or created</inlineHelpText>
    <label>Date of Plan</label>
    <type>Date</type>
</CustomField>