force-app/main/default/objects/IEP__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <inlineHelpText>Family’s Future Goal for the Child</inlineHelpText>
    <label>Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>