force-app/main/default/objects/IEP__c/fields/Performance_Level__c.field-meta.xml
<CustomField>
    <fullName>Performance_Level__c</fullName>
    <inlineHelpText>Present level of performance</inlineHelpText>
    <label>Performance Level</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>