force-app/main/default/objects/IEP__c/fields/Recognise_Colours__c.field-meta.xml
<CustomField>
    <fullName>Recognise_Colours__c</fullName>
    <label>Recognise Colours</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>