force-app/main/default/objects/IEP__c/fields/Recognise_Letters_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Recognise_Letters_Numbers__c</fullName>
    <label>Recognise Letters/Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>