force-app/main/default/objects/IEP__c/fields/Response_to_Questions__c.field-meta.xml
<CustomField>
    <fullName>Response_to_Questions__c</fullName>
    <inlineHelpText>Response on general questions</inlineHelpText>
    <label>Response to Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>