force-app/main/default/objects/IEP__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <inlineHelpText>Visual Motor and Imitation Skills</inlineHelpText>
    <label>Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>