force-app/main/default/objects/IEP__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The intended start date of the plan</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>